[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoring_lib"
version = "0.1.0"
description = "HTTP monitoring tools"

readme = "README.md"
license = {text = "MIT"}
dependencies = ["confluent_kafka"]

[tool.setuptools]
packages = ["monitoring_lib"]

